--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fro-quest-1-js",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Fro Quest (FQ1)",
   "keywords": [
     "Fro",
@@ -22,6 +22,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "clean": "npx rimraf dist node_modules",
+    "lint": "eslint .",
     "server": "npx http-server dist",
     "watch": "webpack --watch"
   },
@@ -33,11 +34,17 @@
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "css-minimizer-webpack-plugin": "^3.0.2",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
     "glob": "^7.1.7",
     "html-minimizer-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.3.2",
     "html-webpack-tags-plugin": "^3.0.1",
     "json-minimizer-webpack-plugin": "^3.0.0",
+    "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.42.0",
